[package]
name = "memvec"
version = "0.0.1"
edition = "2021"
keywords = ["mmap", "memmap2", "vec", "vector", "file", "data structure"]
description = "Memory-backed vector, not buffer. Designed for for mmap. Not MemMap, but MemVec!"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.5.3"

[dev-dependencies]
static_assertions = "1.1.0"
